fixed layout bug

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -52,9 +52,9 @@
   font-size: 24px;
 }
 
-/* .pic {
+.pic {
   margin: 0;
-} */
+}
 
 .active {
   display: block;
